# lightfriend

./:    .dockerignore  .env.example  .gitignore  ADHD_KONTEKSTI.md  CLAUDE.md  DEPLOY_CLEANUP.md  DOCKER_SETUP.md  Dockerfile.backend  Dockerfile.frontend  ENCRYPTION_PLAN.md  MATRIX_SETUP_GUIDE.md  MIGRATION_PLAN.md  RALPH_PRD.json  RALPH_PROGRESS.txt  RALPH_PROMPT.md  README-DEPLOYMENT.md  README.md  SYSTEM_BEHAVIORS_NEXT.md  TINFOIL_DEBUGGING.md  TINFOIL_VOICE_PLAN.md  TRUSTLESS_ARCHITECTURE.md  You'll need to add the base64 dependency to your Cargo.toml if it's not already there:  adhd-session-context.txt  checklist.md  docker-compose.yaml  foundry.toml  index.html  init.sh  justfile  notes-for-matrix-bridges.md  progress.txt  test-results.txt  test_hmac.py  update_lightfriend.sh
backend/: .env.example  .gitignore  Cargo.toml  DEPLOY_PG_MIGRATION.md  diesel_pg.toml  lightfriend_status.sh  migrate_twilio_to_pg.sh  robots.txt  rollback_lightfriend.sh  update_lightfriend.sh
backend/.cargo/: config.toml
backend/fuzz/: Cargo.toml  README.md
backend/fuzz/fuzz_targets/: telnyx_signature.rs  twilio_signature.rs
backend/migrations/00000000000001_init/: down.sql  up.sql
backend/migrations/2025-02-01-193811_add_nickname/: up.sql
backend/migrations/2025-02-02-204056_create_phone_verification_otps/: down.sql  up.sql
backend/migrations/2025-02-08-205047_phonenumberfromemail/: down.sql  up.sql
backend/migrations/2025-02-09-120720_removeemail/: down.sql  up.sql
backend/migrations/2025-02-09-144324_add_ttl/: down.sql  up.sql
backend/migrations/2025-02-09-144557_remove/: down.sql  up.sql
backend/migrations/2025-02-09-144757_optional/: down.sql  up.sql
backend/migrations/2025-02-09-145938_add_verified_to_users/: down.sql  up.sql
backend/migrations/2025-02-09-233420_add_iq/: down.sql  up.sql
backend/migrations/2025-02-11-162701_notify_credits/: down.sql  up.sql
backend/migrations/2025-02-13-071232_add_locality_to_users/: down.sql  up.sql
backend/migrations/2025-02-14-111102_addemail/: down.sql  up.sql
backend/migrations/2025-02-14-113516_make_username_nullable/: down.sql  up.sql
backend/migrations/2025-02-14-120019_usernamegone/: down.sql  up.sql
backend/migrations/2025-02-14-121629_add_info/: down.sql  up.sql
backend/migrations/2025-02-15-202129_adding-latest-called-number/: down.sql  up.sql
backend/migrations/2025-02-17-182743_adding_conversation/: down.sql  up.sql
backend/migrations/2025-02-20-234348_create_calls/: down.sql  up.sql
backend/migrations/2025-02-21-004939_call_id_to_string/: down.sql  up.sql
backend/migrations/2025-02-21-023407_delete_call_table/: up.sql
backend/migrations/2025-02-21-105104_addtwilionumbertoconvs/: down.sql  up.sql
backend/migrations/2025-02-21-114239_delete_conversations/: up.sql
backend/migrations/2025-02-21-162639_add_user_number_to_conv/: down.sql  up.sql
backend/migrations/2025-02-24-071846_usage_table/: down.sql  up.sql
backend/migrations/2025-02-24-081332_add_cost_iq_for_User/: down.sql  up.sql
backend/migrations/2025-02-24-084610_debugunsuccessful/: down.sql  up.sql
backend/migrations/2025-02-24-164904_addsubscriptions/: up.sql
backend/migrations/2025-02-26-133352_add_scheduled_to_cancel/: down.sql  up.sql
backend/migrations/2025-02-27-204911_add_charge_amount_fields/: down.sql  up.sql
backend/migrations/2025-02-28-190010_addstripe/: down.sql  up.sql
backend/migrations/2025-02-28-190416_addstripe/: down.sql  up.sql
backend/migrations/2025-03-01-182048_add_stripe_payment_method_id/: down.sql  up.sql
backend/migrations/2025-03-01-204431_add_stripe_session/: down.sql  up.sql
backend/migrations/2025-03-02-120902_remove_stripe_customer_real_quick/: up.sql
backend/migrations/2025-03-02-184659_rename_iq_to_credits/: down.sql  up.sql
backend/scripts/: migrate_sqlite_to_postgres.py
backend/src/: agent_core.rs  ai_config.rs  cli.rs  context.rs  error.rs  lib.rs  main.rs  pg_models.rs  pg_schema.rs  schema.rs  schema_new.rs  test_utils.rs
backend/static/: about.json  llms-full.txt  llms.txt  robots.txt  sitemap.xml
backend/stripe_webhook_logic/: Cargo.toml
backend/tests/: action_executor_test.rs  admin_broadcast_exclusions_test.rs  ai_config_test.rs  bridge_edit_test.rs  bridge_integration_test.rs  bridge_redaction_test.rs  bridge_responses_test.rs  bridge_test.rs  calendar_test.rs  channels_router_test.rs  channels_sinch_test.rs  channels_telnyx_test.rs  country_service_test.rs  country_test.rs  digest_delivery_test.rs  digest_layout_test.rs  digest_time_parser_test.rs  elevenlabs_test.rs  event_lifecycle_test.rs  group_attention_gate_test.rs  id_verifier_test.rs  imap_auth_test.rs  imap_idle_test.rs  internal_routing_test.rs  item_processing_test.rs  item_repository_test.rs  kani_signature_proofs.rs  light_tool_bootstrap_handler_test.rs  light_tool_bootstrap_test.rs  light_tool_devices_repository_test.rs  light_tool_identity_test.rs  light_tool_messages_handler_test.rs  light_tool_pairing_test.rs  light_tool_push_delivery_test.rs  light_tool_push_handler_test.rs  light_tool_runs_repository_test.rs  light_tool_voice_session_test.rs  llm_integration_test.rs  management_test.rs  matrix_mock_test.rs  (+35 more)
frontend/: 3d870fd8-5621-466c-8d7b-e326e09db85e.txt  Cargo.toml  Trunk.toml  index.html  robots.txt
frontend/assets/: design-system.css  fonts.css  llm.txt  styles.css
frontend/src/: admin.rs  auth_components.rs  billing.rs  config.rs  main.rs  money.rs  pages.rs  profile.rs  settings.rs  styles.css  termsprivacy.rs  usage_graph.rs  verify.rs
frontend/styles/: admin.css
notify-server/: .env.example  Cargo.toml  README.md
notify-server/scripts/: host-setup.sh
notify-server/src/: config.rs  email.rs  main.rs  sms.rs
parent-proxy/: .env.example  CLAUDE.md  Cargo.toml  README.md
parent-proxy/.claude/: settings.json
parent-proxy/src/: config.rs  db.rs  handlers.rs  lib.rs  main.rs  proxy.rs
parent-proxy/tests/: db_tests.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: main.rs
tools/attestation-verifier/: Cargo.toml
(+1098 files in other folders)
