[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
imap = "2.4"
native-tls = "0.2"
regex = "1.10.3"
quoted_printable = "0.4"
time = "0.3"
sha1 = "0.10"
tokio-cron-scheduler = "0.9"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.8"
jiff = "0.2.5"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
bcrypt = "0.10"
jsonwebtoken = "8.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["multipart", "json"] }
hound = "3.5"
base64 = "0.21"
rusqlite = { version = "0.31.0", features = ["bundled"] }  # Auto-compiles SQLite
sentry = "0.36.0"
once_cell = "1.20.3"
openai-api-rs = "5.2.6"
sha2 = "0.10"
hmac = "0.12"
hyper = { version = "1", features = ["server", "http1"] }
bytes = "1.10.0"
http-body-util = "0.1"
openssl = "0.10"
url = "2"
hex = "0.4"
uuid = { version = "1.4", features = ["v4"] }  # For generating unique IDs if needed
async-stripe = { version = "0.36", features = ["runtime-tokio-hyper"] }
ring = "0.17" # For encryption
aes-gcm = "0.10.3" # for encryption
magic-crypt = "4.0" # for encryption
urlencoding = "2.1.0"
oauth2 = { version = "5.0", features = ["reqwest"] }
tower-sessions = { version = "0.12.0", features = ["axum-core"] }
tower = "0.4"
mockall = "0.11"
