[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
roxmltree = "0.20.0"
mime_guess = "2.0"
image = "0.24"  # For image processing
quircs = "0.10"  # For QR code scanning
lettre = { version = "0.10", features = ["smtp-transport", "tokio1", "tokio1-native-tls"] }
strsim = "0.11.1"
governor = "0.6"  # For rate limiting
dashmap = "5.5"  # For concurrent hash map to store per-user limits
anyhow = "1.0"
mail-parser = "0.10"
imap = "2.4"
native-tls = "0.2"
regex = "1.10.3"
time = "0.3"
sha1 = "0.10"
tokio-cron-scheduler = "0.9"
axum = { version = "0.8", features = ["ws", "multipart"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.8"
jiff = "0.2.5"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "set-header"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
bcrypt = "0.10"
jsonwebtoken = "8.1"
totp-rs = { version = "5.6", features = ["qr", "otpauth", "gen_secret"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
base64 = "0.21.7"
sentry = "0.36.0"
once_cell = "1.20.3"
openai-api-rs = "5.2.6"
sha2 = "0.10"
hmac = "0.12"
hyper = { version = "1", features = ["server", "http1"] }
bytes = "1.10.0"
http-body-util = "0.1"
openssl = "0.10"
url = "2"
hex = "0.4"
uuid = { version = "1.4", features = ["v4"] }  # For generating unique IDs if needed
async-stripe = { version = "0.36", features = ["runtime-tokio-hyper"] }
aes-gcm = "0.10.3" # for encryption
urlencoding = "2.1.0"
oauth2 = { version = "5.0", features = ["reqwest"] }
tower-sessions = { version = "0.12.0", features = ["axum-core"] }
tower = "0.4"
mockall = "0.11"
matrix-sdk = { version = "0.13.0", features = ["sqlite", "e2e-encryption"] }
thiserror = "1.0"
async-trait = "0.1"
p256 = { version = "0.13", features = ["pem"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
async-stream = "0.3"
tokio-stream = "0.1"
resend-rs = "0.9"
serde_urlencoded = "0.7.1"
phonenumber = "0.3"  # Google libphonenumber port for Rust - handles E.164 parsing and country detection

[dev-dependencies]
serial_test = "3.0"  # For tests that modify environment variables
wiremock = "0.6"  # For mock HTTP server tests
tempfile = "3.10"  # For temporary directories in tests
