[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"
description = "Out-of-band alert relay for Lightfriend. Receives webhooks, sends SMS via Twilio and digest emails via Resend."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
dashmap = "6"
once_cell = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
