[package]
name = "lightfriend-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "lightfriend_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]
